--- a/style.css
+++ b/style.css
@@ -58,10 +58,24 @@
     background-repeat: no-repeat;
     background-size: cover;
     height: 80vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
+
+  .header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 80vh;
+    position: relative;
+    z-index: 1;
+  }
+  
+  .header-content {
+    text-align: center;
+    color: white;
+    position: relative;
+    z-index: 2;
+  }
+  
   
   .header-content {
     text-align: center;
