--- a/style.css
+++ b/style.css
@@ -5,16 +5,29 @@
   }
   
   body {
-    font-family: Arial, sans-serif;
+    font-family: 'Kanit', Arial, sans-serif;
   }
   
   #navbar {
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
     background-color: #ffffff;
-    border-bottom: 2.5px solid #555; /* Add a thin outline to the nav bar */
+    border-bottom: 2.5px solid #272727; /* Add a thin outline to the nav bar */
+  }
+  
+  .text-logo {
+    color: rgb(0, 0, 0);
+    font-size: 24px;
+    text-decoration: none;
+    font-weight: 600;
+    transition: all 0.3s ease;
+    
+  }
+  
+  .text-logo:hover {
+    color: #ff9800; /* Change the color when hovered */
   }
   
   .hamburger-menu {
@@ -35,7 +48,6 @@
   .nav-links {
     display: flex;
     list-style: none;
-    order: 0;
   }
   
   .nav-links li a {
@@ -46,12 +58,11 @@
   }
 
   .nav-links li a:hover {
-    color: #00b7ff; /* Change the color when hovered */
+    color: rgb(174, 255, 44); /* Change the color when hovered */
     text-decoration: underline; /* Add an underline when hovered */
   }  
   
   .parallax {
-    background-color: aqua;
     background-image: url('your-image-url.jpg');
     background-attachment: fixed;
     background-position: center;
@@ -88,7 +99,8 @@
   }
 
   .header-button {
-    background-color: #005577;;
+    background-color: rgb(103, 167, 2);
+    font-family: 'Kanit';
     color: white;
     font-size: 18px;
     border: none;
@@ -100,7 +112,7 @@
   }
   
   .header-button:hover {
-    background-color: #00b7ff;; /* Change the background color on hover */
+    background-color: rgb(174, 255, 44); /* Change the background color on hover */
   }
   
   section {
@@ -109,8 +121,6 @@
   }
   
   svg {
-    viewBox: "0 0 100 10";
-    preserveAspectRatio: "none";
     fill: white;
     width: 100%;
     height: 10vh;
@@ -141,7 +151,17 @@
     }
   
     #navbar {
-      justify-content: flex-end;
+      justify-content: space-between;
     }
   }
+
+  .logo {
+    display: inline-block;
+  }
+  
+  .logo img {
+    height: 70px; /* Adjust the height to fit your design */
+    width: auto;
+  }
+  
   
