--- a/style.css
+++ b/style.css
@@ -30,11 +30,52 @@
     color: #ff9800; /* Change the color when hovered */
   }
   
+  .logo {
+    display: inline-block;
+    position: relative;
+    height: 40px;
+  }
+  
+  .logo-container {
+    position: relative;
+    height: 100%;
+  }
+  
+  .logo-normal,
+  .logo-hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 40px; /* Adjust the height to fit your design */
+    width: auto;
+    transition: opacity 0.3s ease; /* Add a smooth transition for the opacity */
+  }
+  
+  .logo-hover {
+    opacity: 0;
+  }
+  
+  .logo:hover .logo-normal {
+    opacity: 0;
+  }
+  
+  .logo:hover .logo-hover {
+    opacity: 1;
+  }
   .hamburger-menu {
     display: none;
     cursor: pointer;
     position: relative;
     order: 1;
+    transition: color 0.3s ease;
+  }
+
+  .hamburger-menu:hover {
+    color: rgb(174, 255, 44); /* Change the color when hovered */
+  }
+  
+  .hamburger-menu:hover .bar {
+    background-color: rgb(174, 255, 44); /* Change the color when hovered */
   }
   
   .hamburger-menu .bar {
@@ -55,11 +96,12 @@
     text-decoration: none;
     padding: 1rem 1.5rem;
     display: inline-block;
+    transition: all 0.3s ease;
   }
 
   .nav-links li a:hover {
     color: rgb(174, 255, 44); /* Change the color when hovered */
-    text-decoration: underline; /* Add an underline when hovered */
+    /* text-decoration: underline; /* Add an underline when hovered */
   }  
   
   .parallax {
@@ -162,6 +204,41 @@
   .logo img {
     height: 70px; /* Adjust the height to fit your design */
     width: auto;
+  }
+
+  /* Arrow */
+  
+  .scroll-arrow {
+    font-size: 32px;
+    color: rgb(103, 167, 2);
+    text-decoration: none;
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 2s infinite;
+    transition: color 0.3s ease;
+  }
+
+  .scroll-arrow:hover {
+    color: rgb(174, 255, 44) /* Change the color when hovered */
+  }
+  
+  
+  @keyframes bounce {
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+      transform: translateX(-50%) translateY(0);
+    }
+    40% {
+      transform: translateX(-50%) translateY(-30px);
+    }
+    60% {
+      transform: translateX(-50%) translateY(-15px);
+    }
   }
   
   
