--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
   }
+
+  @import url('https://fonts.googleapis.com/css?family=Oswald');
   
   body {
-    font-family: 'Kanit', Arial, sans-serif;
+    font-family: 'Kanit', sans-serif;
+
   }
   
   #navbar {
@@ -105,7 +108,7 @@
   }  
   
   .parallax {
-    background-image: url('your-image-url.jpg');
+    background-image: url('img/2199583.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -124,7 +127,7 @@
   
   .header-content {
     text-align: center;
-    color: white;
+    color:rgba(255, 255, 255, 0.8);
     position: relative;
     z-index: 2;
   }
@@ -138,6 +141,9 @@
   .header-content h1 {
     font-size: 48px;
     margin-bottom: 1rem;
+    font-family: 'Planet Kosmos', sans-serif; /* Replace '<font-name>' with the name you used in the @font-face rule */
+    font-weight: normal;
+    font-style: normal;
   }
 
   .header-button {
@@ -162,11 +168,13 @@
     font-size: 18px;
   }
   
+  
   svg {
     fill: white;
     width: 100%;
     height: 10vh;
   }
+  
   
   /* Transform the top bar into an angled line */
   .hamburger-menu.open .bar:nth-child(1) {
@@ -279,6 +287,12 @@ footer {
   color: rgb(0, 0, 0);
   font-size: 18px;
   transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
+}
+
+.social-icon i {
+  margin-right: 8px; /* Add this line to create some space between the icon and the text */
 }
 
 .social-icon:hover,
@@ -286,5 +300,43 @@ footer {
   color: rgb(174, 255, 44)  /* Change the color when hovered */
 }
 
+/* scroll to top */
 
-  
+.scroll-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #ffffff;
+  background-color: rgb(103, 167, 2);
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  opacity: 0;
+  transition: background-color 0.3s ease, opacity 0.5s ease;
+}
+
+.scroll-to-top:hover {
+  background-color: rgb(174, 255, 44) 
+}
+
+.visible {
+  opacity: 1;
+}
+
+/* custom font*/
+
+@font-face {
+  font-family: 'Planet Kosmos';
+  src: url('fonts/plank___-webfont.woff2) format('woff2'),
+       url('fonts/plank___-webfont.woff2') format('woff'),
+       url('fonts/<font-file>.eot') format('embedded-opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
+
