--- a/style.css
+++ b/style.css
@@ -20,19 +20,6 @@
     border-bottom: 2.5px solid #272727; /* Add a thin outline to the nav bar */
   }
   
-  .text-logo {
-    color: rgb(0, 0, 0);
-    font-size: 24px;
-    text-decoration: none;
-    font-weight: 600;
-    transition: all 0.3s ease;
-    
-  }
-  
-  .text-logo:hover {
-    color: #ff9800; /* Change the color when hovered */
-  }
-  
   .logo {
     display: inline-block;
     position: relative;
@@ -84,7 +71,7 @@
   .hamburger-menu .bar {
     width: 25px;
     height: 3px;
-    background-color: rgb(0, 0, 0);
+    background-color: #272727;
     margin: 4px 0;
     transition: all 0.3s ease;
   }
@@ -95,7 +82,7 @@
   }
   
   .nav-links li a {
-    color: rgb(0, 0, 0);
+    color: #272727;
     text-decoration: none;
     padding: 1rem 1.5rem;
     display: inline-block;
@@ -135,7 +122,7 @@
   
   .header-content {
     text-align: center;
-    color: rgb(29, 29, 29);
+    color: #272727;
   }
   
   .header-content h1 {
@@ -338,4 +325,27 @@ footer {
   font-style: normal;
 }
 
+/* header typed style*/
 
+#header{
+  font-size: 48px;
+  margin-bottom: 1rem;
+  font-family: 'Planet Kosmos', sans-serif;
+  font-weight: normal;
+  font-style: normal;
+}
+
+.cursor {
+  display: inline-block;
+  width: 10px;
+  height: 48px;
+  margin-left: 5px;
+  background-color: #272727;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  50% {
+    opacity: 0;
+  }
+}
