--- a/style.css
+++ b/style.css
@@ -5,9 +5,10 @@
   }
 
   @import url('https://fonts.googleapis.com/css?family=Oswald');
-  
+  @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
+
   body {
-    font-family: 'Kanit', sans-serif;
+    font-family: 'Roboto', monospace;
   }
   
   #navbar {
@@ -86,6 +87,7 @@
     padding: 1rem 1.5rem;
     display: inline-block;
     transition: all 0.3s ease;
+    font-weight: bold;
   }
 
   .nav-links li a:hover {
@@ -133,7 +135,7 @@
 
   .header-button {
     background-color: rgb(103, 167, 2);
-    font-family: 'Kanit';
+    font-family: 'Roboto', monospace;
     color: white;
     font-size: 18px;
     border: none;
@@ -214,7 +216,6 @@
   .scroll-arrow:hover {
     color: rgb(174, 255, 44) /* Change the color when hovered */
   }
-  
   
   @keyframes bounce {
     0%,
