--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 
   body {
     font-family: 'Roboto', monospace;
+    background-color: #000000;
   }
   
   #navbar {
@@ -16,8 +17,8 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #ffffff;
-    border-bottom: 2.5px solid #272727; /* Add a thin outline to the nav bar */
+    background-color: #000000;
+    border-bottom: 2.5px solid #ffffff; /* Add a thin outline to the nav bar */
   }
   
   .logo {
@@ -61,17 +62,17 @@
   }
 
   .hamburger-menu:hover {
-    color: rgb(174, 255, 44); /* Change the color when hovered */
+    color: #48FCE9ff; /* Change the color when hovered */
   }
   
   .hamburger-menu:hover .bar {
-    background-color: rgb(174, 255, 44); /* Change the color when hovered */
+    background-color: #48FCE9ff; /* Change the color when hovered */
   }
   
   .hamburger-menu .bar {
     width: 25px;
     height: 3px;
-    background-color: #272727;
+    background-color: #ffffff;
     margin: 4px 0;
     transition: all 0.3s ease;
   }
@@ -82,7 +83,7 @@
   }
   
   .nav-links li a {
-    color: #272727;
+    color: #ffffff;
     text-decoration: none;
     padding: 1rem 1.5rem;
     display: inline-block;
@@ -91,12 +92,12 @@
   }
 
   .nav-links li a:hover {
-    color: rgb(174, 255, 44); /* Change the color when hovered */
+    color: rgb(0, 217, 225); /* Change the color when hovered */
     /* text-decoration: underline; /* Add an underline when hovered */
   }  
   
   .parallax {
-    background-image: url('img/header_bg.png');
+    background-image: url('img/main_header_image.jpg');
     background-attachment: fixed;
     background-position: center;
     background-repeat: no-repeat;
@@ -122,7 +123,7 @@
   
   .header-content {
     text-align: center;
-    color: #272727;
+    color: rgb(255, 255, 255);
   }
   
   .header-content h1 {
@@ -134,7 +135,7 @@
   }
 
   .header-button {
-    background-color: rgb(103, 167, 2);
+    background-color: #4C61EEff;
     font-family: 'Roboto', monospace;
     color: white;
     font-size: 18px;
@@ -147,12 +148,14 @@
   }
   
   .header-button:hover {
-    background-color: rgb(174, 255, 44); /* Change the background color on hover */
+    background-color: rgb(0, 217, 225); /* Change the background color on hover */
   }
   
   section {
     padding: 2rem;
     font-size: 18px;
+    background-color: black; /* Set background to black */
+    color: white; /* Change text color to white for better visibility */
   }
   
   svg {
@@ -203,7 +206,7 @@
   
   .scroll-arrow {
     font-size: 32px;
-    color: rgb(103, 167, 2);
+    color: rgb(0, 217, 225);
     text-decoration: none;
     position: absolute;
     bottom: 20px;
@@ -214,7 +217,7 @@
   }
 
   .scroll-arrow:hover {
-    color: rgb(174, 255, 44) /* Change the color when hovered */
+    color: rgb(46, 163, 151) /* Change the color when hovered */
   }
   
   @keyframes bounce {
@@ -232,22 +235,24 @@
       transform: translateX(-50%) translateY(-15px);
     }
   }
-  
-  /* Footer */
+
+/* Footer */
 
 footer {
-  background-color: #ffffff;
+  background-color: #000000;
   padding: 1rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  border-top: 2.5px solid #272727;
+  border-top: 2.5px solid #ffffff;
   flex-wrap: wrap;
+  position: sticky;
+  top: 100vh;
 }
 
 .copyright {
-  color: #272727;
+  color: #ffffff;
   font-size: 14px;
   text-align: center;
   width: 100%; /* Add this line to make the copyright div take full width */
@@ -268,7 +273,7 @@ footer {
 .social-icon,
 .footer-links a {
   text-decoration: none;
-  color: rgb(0, 0, 0);
+  color: rgb(255, 255, 255);
   font-size: 18px;
   transition: color 0.3s ease;
   display: flex;
@@ -281,17 +286,17 @@ footer {
 
 .social-icon:hover,
 .footer-links a:hover {
-  color: rgb(174, 255, 44)  /* Change the color when hovered */
+  color: #48FCE9ff  /* Change the color when hovered */
 }
 
-/* scroll to top */
+/* Scroll to Top */
 
 .scroll-to-top {
   position: fixed;
   bottom: 20px;
   right: 20px;
   color: #ffffff;
-  background-color: rgb(103, 167, 2);
+  background-color: #48FCE9ff ;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -301,17 +306,20 @@ footer {
   cursor: pointer;
   opacity: 0;
   transition: background-color 0.3s ease, opacity 0.5s ease;
+  z-index: 999;
 }
 
 .scroll-to-top:hover {
-  background-color: rgb(174, 255, 44) 
+  background-color: rgb(48, 164, 152);
 }
+
+
 
 .visible {
   opacity: 1;
 }
 
-/* custom font*/
+/* Custom Font*/
 
 @font-face {
   font-family: 'Planet Kosmos';
@@ -322,7 +330,7 @@ footer {
   font-style: normal;
 }
 
-/* header typed style*/
+/* Header Typed Style*/
 
 #header{
   font-size: 48px;
@@ -337,7 +345,7 @@ footer {
   width: 10px;
   height: 48px;
   margin-left: 5px;
-  background-color: #272727;
+  background-color: #ffffff;
   animation: blink 1s infinite;
 }
 
@@ -345,4 +353,63 @@ footer {
   50% {
     opacity: 0;
   }
+}
+
+/* Freebie Image Grid Style*/
+
+.image-grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.image-grid a {
+  position: relative;
+  display: block;
+  overflow: hidden;
+}
+
+.image-grid img {
+  max-width: 100%;
+  height: auto;
+  transition: transform 0.3s ease;
+}
+
+.image-grid a:hover img {
+  transform: scale(1.1); /* Zoom effect on hover */
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Gray overlay with transparency */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.image-grid a:hover .overlay {
+  opacity: 1; /* Show overlay on hover */
+}
+
+.overlay i {
+  color: white;
+  font-size: 32px;
+  margin-bottom: 5px;
+}
+
+.overlay span {
+  color: white;
+  font-size: 18px; /* Adjust the font size for the "Download" text */
+  text-align: center;
+}
+
+.overlay i:hover {
+  cursor: pointer;
 }
