--- a/style.css
+++ b/style.css
@@ -21,9 +21,8 @@
     border-bottom: 2.5px solid #ffffff; /* Add a thin outline to the nav bar */
   }
 
-    /* Target the space where time, battery percent, etc., are displayed */
-  /* Assuming it's a specific element like a container div */
-  .mobile-status-bar {
+  /* Target the space where time, battery percent, etc., are displayed */
+  #navbar > * {
     background-color: #000000; /* Match the background color of the navbar */
   }
 
