--- a/style.css
+++ b/style.css
@@ -26,15 +26,6 @@
     background-color: #000000; /* Match the background color of the navbar */
   }
 
-  /* CSS for Safari Mobile */
-@media screen and (-webkit-touch-callout: none) {
-  /* Adjust background color of body or HTML */
-  body, html {
-      background-color: #000000; /* Match the background color of the navbar */
-  }
-}
-
-  
   .logo {
     display: inline-block;
     position: relative;
@@ -447,4 +438,23 @@ footer {
   }
   .header-button-link:hover {
     background-color: rgb(37, 130, 120) /* Change the hover background color to your desired color */
+  } 
+
+/* Website Tinting in Safari */ 
+  :root {
+    --background-color: #ffffff; /* Light mode background color */
+    --text-color: #000000; /* Light mode text color */
   }
+  
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background-color: #000000; /* Dark mode background color */
+      --text-color: #ffffff; /* Dark mode text color */
+    }
+  }
+  
+  body {
+    background-color: var(--background-color);
+    color: var(--text-color);
+  }
+  
