--- a/style.css
+++ b/style.css
@@ -211,7 +211,7 @@
   
   .scroll-arrow {
     font-size: 32px;
-    color:  #02A191;
+    color:  #ffffff;
     text-decoration: none;
     position: absolute;
     bottom: 20px;
@@ -300,8 +300,8 @@ footer {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  color: #ffffff;
-  background-color:  #02A191;
+  color: #02A191;
+  background-color: #ffffff;
   border-radius: 50%;
   width: 40px;
   height: 40px;
