--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 
   @import url('https://fonts.googleapis.com/css?family=Oswald');
   @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap');
-
+  @import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+  
   body {
-    font-family: 'Roboto', monospace;
-    background-color: #000000;
+    font-family: 'Space Mono', monospace;
+    background-color: #ffffff;
   }
   
   #navbar {
@@ -17,13 +18,13 @@
     justify-content: space-between;
     align-items: center;
     padding: 1rem 2rem;
-    background-color: #000000;
+    background-color: #ffffff;
     border-bottom: 2.5px solid #ffffff; /* Add a thin outline to the nav bar */
   }
 
   /* Target the space where time, battery percent, etc., are displayed */
   #navbar > * {
-    background-color: #000000; /* Match the background color of the navbar */
+    background-color: #ffffff; /* Match the background color of the navbar */
   }
 
   .logo {
@@ -77,7 +78,7 @@
   .hamburger-menu .bar {
     width: 25px;
     height: 3px;
-    background-color: #ffffff;
+    background-color: #000000;
     margin: 4px 0;
     transition: all 0.3s ease;
   }
@@ -88,7 +89,7 @@
   }
   
   .nav-links li a {
-    color: #ffffff;
+    color: #000000;
     text-decoration: none;
     padding: 1rem 1.5rem;
     display: inline-block;
@@ -159,8 +160,8 @@
   section {
     padding: 2rem;
     font-size: 18px;
-    background-color: black; /* Set background to black */
-    color: white; /* Change text color to white for better visibility */
+    background-color: rgb(255, 255, 255); /* Set background to black */
+    color: rgb(0, 0, 0); /* Change text color to white for better visibility */
   }
   
   svg {
@@ -244,20 +245,20 @@
 /* Footer */
 
 footer {
-  background-color: #000000;
+  background-color: #ffffff;
   padding: 1rem 1rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 1rem;
-  border-top: 2.5px solid #ffffff;
+  border-top: 2.5px solid #000000;
   flex-wrap: wrap;
   position: sticky;
   top: 100vh;
 }
 
 .copyright {
-  color: #ffffff;
+  color: #000000;
   font-size: 14px;
   text-align: center;
   width: 100%; /* Add this line to make the copyright div take full width */
@@ -278,7 +279,7 @@ footer {
 .social-icon,
 .footer-links a {
   text-decoration: none;
-  color: #ffffff;
+  color: #000000;
   font-size: 18px;
   transition: color 0.3s ease;
   display: flex;
@@ -300,8 +301,8 @@ footer {
   position: fixed;
   bottom: 20px;
   right: 20px;
-  color: #02A191;
-  background-color: #ffffff;
+  color: #ffffff;
+  background-color: #000000;
   border-radius: 50%;
   width: 40px;
   height: 40px;
@@ -428,8 +429,8 @@ footer {
   /* Style for the buttons */
   .header-button-link {
     text-decoration: none;
-    color: white; /* Change the color to your desired color */
-    background-color: #02A191; /* Change the background color to your desired color */
+    color: rgb(255, 255, 255); /* Change the color to your desired color */
+    background-color: #000000; /* Change the background color to your desired color */
     padding: 10px 20px;
     border-radius: 5px;
     margin-right: 10px; /* Adjust the margin as needed */
